--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
             </div>
             <div id="tabs-top">
                   <a href="homepage.html">HOMEPAGE</a>
-                <a href="contact.html">CONTACT DETAILS</a>
             </div>
            <div id="main">
                   <div id="content">
@@ -22,6 +21,9 @@
         <a href="index.html">Back</a>
      </div>
           </div>
+            </div>
+                      <div id="tabs-bottom">
+                          <a href="contact.html">CONTACT</a>
             </div>
     </body>
 </html>
