--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
             </div>
             <div id="tabs-top">
                   <a href="homepage.html">HOMEPAGE</a>
-                <a href="contact.html">CONTACT DETAILS</a>
             </div>
             <div id="main-home">
-                  <img src="images/WhatsApp%20Image%202021-01-14%20at%2000.14.55.jpeg" width="100%">
+                  <img src="images/WhatsApp%20Image%202021-01-14%20at%2000.14.55.jpeg" width="100%" height="100%">
+            </div>
+                                <div id="tabs-bottom">
+                          <a href="contact.html">CONTACT</a>
             </div>
       </body>
 </html>
