--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
            <div id="main">
                   <div id="content">
                        <div id="info-box-full">
-                           <img src="images/sino.jfif"/ height="800" width="120">
+                           <img src="images/sino.jfif"/>
                            <h3>CONTACT DETAILS</h3>
         <p>CONTACT NUMBER : 063 276 1599</p>
         <p>EMAIL ADDRESS : sinoxolocesane@gmail.com</p>
