--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,18 @@
                   <div id="content">
                        <div id="info-box-full">
                            <img src="images/sino.jfif"/>
+                           <br/>
+                           <br/>
                            <h3>CONTACT DETAILS</h3>
+                           <br/>
+                           <br/>
+                           <br/>
         <p>CONTACT NUMBER : 063 276 1599</p>
-        <p>EMAIL ADDRESS : sinoxolocesane@gmail.com</p>
+                           <br/>
+        <p>EMAIL ADDRESS : sinoxolocesane9@gmail.com</p>
+                           <br/>
+                           <br/>
+                           <br/>
         <a href="index.html">Back</a>
      </div>
           </div>
